syntax = "proto3";

option go_package = "pt.example/grcp-test/grcptest";

// The greeting service definition.
service Task {
    // Sends a greeting
    rpc SaveTodoTask (TaskReq) returns (TaskRes) {}
  }

// The request message containing the user's name.
message TaskReq {
    string title = 1;
}

// The response message containing the greetings
message TaskRes {
    string message = 1;
}